# image_retrieval_system

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  build.cpp  data_loader.cpp  vlad_process.cpp
